package NKikimrTabletBase;
option java_package = "ru.yandex.kikimr.proto";

message TTabletSimpleCounter {
    optional string Name = 1;
    optional uint64 Value = 2;
}

message TTabletCumulativeCounter {
    optional string Name = 1;
    optional uint64 Value = 2;
}

message TTabletPercentileCounter {
    optional string Name = 1;
    repeated string Ranges = 2;
    repeated uint64 Values = 3;
}

message TTabletCountersBase {
    repeated TTabletSimpleCounter SimpleCounters = 1;
    repeated TTabletCumulativeCounter CumulativeCounters = 2;
    repeated TTabletPercentileCounter PercentileCounters = 3;
};

message TTabletCounters {
    optional TTabletCountersBase ExecutorCounters = 1;
    optional TTabletCountersBase AppCounters = 2;
};
