package NKikimrTabletCountersAggregator;

option java_package = "ru.yandex.kikimr.proto";
option cc_enable_arenas = true;

message TTabletCounters {
    repeated uint64 SimpleCounters = 1;
    repeated uint64 CumulativeCounters = 2;
}

message TTabletCountersInfo {
    optional uint64 TabletId = 1;
    optional TTabletCounters ExecutorCounters = 2;
    optional TTabletCounters AppCounters = 3;
}

message TEvTabletCountersRequest {
    repeated uint64 TabletIds = 1;
}

message TEvTabletCountersResponse {
    repeated TTabletCountersInfo CountersInfo = 1;
}
